[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp1_ex11"  # Cambia esto de tp1_ex10 a tp1_ex11
version = "0.1.0"
description = "Un paquete de calculadora con funciones complejas"
license = "MIT"
keywords = ["License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

dependencies = [
    "pytest>=7.0.0",
    "pylint>=2.17.0"
]

[project.urls]
"Homepage" = "https://gitlab.com/AlvaBianco/tp1_ex11"  # Actualiza estas URLs
"Bug Tracker" = "https://gitlab.com/AlvaBianco/tp1_ex11/-/issues"